# agent-memory

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  COORDINATION_REFACTOR_PLAN.md  CURRENT_STATUS.md  DAY_1_STATUS.md  DAY_2_STATUS.md  DAY_3_STATUS.md  DAY_4_STATUS.md  DAY_5_POC_STATUS.md  DEBATE_FINAL_CONSENSUS.md  DEBATE_ROUND_6_PROPONENTS_FINAL_CASE.md  DEBATE_SETUP.md  DEEPSEEK_BUG_FIX_SUMMARY.md  DEEPSEEK_COORDINATION_BUG_ANALYSIS.md  DEEPSEEK_COORDINATION_ROOT_CAUSE.md  DEEPSEEK_FINAL_FIX_SUMMARY.md  GEMMA_3_12B_RESULTS.md  HOW_TO_REVIEW.md  ISOLATION_QUALITY_COMPARISON.md  LICENSE  MERGE_PLAN.md  MLX_MIGRATION_PLAN.md  Makefile  NOTICE  NOVELTY.md  Q4_INJECTION_IMPLEMENTATION_COMPLETE.md  README.md  SECURITY.md  SPRINT_4_SUMMARY.md  STREAMING_ANALYSIS.md  TEST_RESULTS.md  TEST_SUCCESS_SUMMARY.md  WARM_CACHE_BUG_ANALYSIS.md  (+42 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  warm-cache-validation.yml
.hypothesis/constants/: 7f753ed172dd9151  b855545eab99b5aa  d86ab2a40fba9dcf  d912812d9052d048  da81ca996b61ed6e  f5550fbd72f53a94
archive/debate_original/: DEBATE_FINAL_SUMMARY.md  DEBATE_ROUND_1_SKEPTICS.md  DEBATE_ROUND_2_PROPONENTS.md  DEBATE_ROUND_3_SKEPTICS_WEBSEARCH.md  DEBATE_ROUND_4_PROPONENTS_FINAL.md  DEBATE_ROUND_5_SKEPTICS_CORRECTED.md  FRAMEWORK_COMPARISON.md  MLX_IMPLEMENTATION_SUMMARY.md  debate_plan.md
archive/outdated_plans/: CONTEXT_LENGTH_ANALYSIS.md  DAY_1_STATUS.md  DAY_2_MANUAL_REVIEW_CHECKLIST.md  DAY_5_POC_STATUS.md  GEMMA_TEST_RESULTS.md  KV_CACHE_REVIEW.md  LLAMA_TO_GEMMA_VALIDATION.md  MODEL_MIGRATION.md  REDESIGN_SUMMARY.md  REVIEW_10_EXAMPLES.txt  complete_plan.md  day_01.md  day_04.md  day_05.md  day_07.md  day_08.md  day_09.md  day_10.md  day_11.md  day_12.md  day_15.md  day_16.md  day_18.md  day_20.md  updated_plan.v1.md  updated_plan.v2.1.md  updated_plan.v2.md
archive/poc/: FILE_STRUCTURE.md  USAGE.md
archive/semantic_isolation/: README.md
benchmarks/: BENCHMARK_METHODOLOGY.md  BENCHMARK_RESULTS.md  README.md  batched_benchmark.py  bench_memory_locks.py  benchmark_suite.py  capability_benchmark.py  colm_full_benchmark.py  comparative_benchmark.py  comprehensive_sweep.py  full_benchmark.py  lmstudio_comparative_benchmark.py  long_context_benchmark.py  openai_benchmark.py  paper_benchmark.py  perplexity_benchmark.py  prisoner_dilemma_benchmark.py  profiling_benchmark.py  real_comparative_benchmark.py  staggered_benchmark.py  step1_lmstudio_only.py  step2_poc_only.py  step3_combine.py  streaming_benchmark.py  validate_warm_cache.py  verify_bug1.py  wikipedia_routing_benchmark.py
benchmarks/data/: prefill_corpus.txt
benchmarks/results/: BENCHMARK_REPORT.md  colm_full_deepseek_20260208_152120.json  colm_full_deepseek_20260209_155053.json  colm_full_deepseek_merged.json  colm_full_gemma_20260208_152120.json  colm_full_gemma_20260209_154125.json  colm_full_gemma_merged.json  comparative_results.json  lmstudio_comparative_results.json  lmstudio_only_results.json  long_context_lmstudio.json  long_context_results.json  multiturn_comparison.json  openai_batch_longctx.json  openai_lmstudio.json  openai_lmstudio_20260131_150129.json  openai_lmstudio_deepseek.json  openai_lmstudio_dscoder.json  openai_lmstudio_v2.json  openai_semantic.json  openai_semantic_20260131_145431.json  openai_semantic_session.json  openai_semantic_v2.json  openai_semantic_v3.json  openai_sweep_batch1.json  openai_sweep_batch2.json  openai_sweep_batch3.json  poc_only_results.json  profiling_20260131_131241.json  profiling_20260131_131241_summary.txt  profiling_20260131_131728.json  (+28 more)
config/: .env.example  default.toml  test.toml
data/: README.md  batch_001_review.md  conflict_dataset.json  conflict_schema.json  golden_eval_examples.json  golden_eval_set.json  train.json
demo/: README.md  app.py  requirements.txt
docs/: CACHE_PREFIX_MATCHING_ANALYSIS.md  MEMORY.md  PRODUCTION_RUNBOOK.md  WARM_CACHE_FIX_DOCUMENTATION.md  WARM_CACHE_TESTING.md  analysis.md  api-reference.md  architecture.md  architecture_analysis.md  cache_storage_schema.md  code-quality-guide.md  configuration.md  debate.md  deployment.md  developer-guide.md  faq.md  index.md  installation.md  model-hot-swap.md  model-onboarding.md  quick-start.md  scenarios.md  testing.md  user-guide.md
experiments/: exp1_visualize.py  exp_003_cache_injection.py  exp_004_cache_extraction.py  exp_007_cache_extraction.py
novelty/: ANALYSIS_SUMMARY.md  EDGE_KV_CACHE_NOVELTY_REVIEW.md  EXISTING_TOOLS_COMPARISON.md  PAPERS_ANALYSIS.md  PAPERS_ANALYSIS_INDEX.md  README.md  STYLE_GUIDE_INSIGHTS.md  WRITEUP.md  adaptive_chunked_prefill.md  character_level_prefix_matching.md  continuous_batching.md  mlx_uma_system_novelty.md  multi_agent_coordination.md  novelty.md  q4_attention_sink_compat.md  q4_direct_injection.md
plans/: POC_PLAN.md  SPRINT_1_INFRASTRUCTURE.md  SPRINT_2_AGENT_MANAGER.md  anthropic_cli_adapter.md  backend_plan.md  character_prefix_matching.md  claude_code_anthropic_guide.md  code_quality_patterns.md  day_02.md  day_03.md  day_05.md  day_05_poc_v2.md  day_06.md  day_11.md  day_13.md  day_14.md  day_17.md  day_19.md  day_21.md  mlx_framework_guide.md  production_plan.md  remediation_plan.md
results/: validation_001_isolation_test.json
scripts/: README.md  add_headers.py  check_warm_cache_pattern.py  code_quality_check.py  debug_mlx_context.py  launch.sh  setup.sh
src/: __init__.py  a2a_server.py  agent_manager.py  api_server.py  batched_engine.py  cache_persistence.py  concurrent_manager.py  config.py  dataset_generator.py  llm_judge.py  mlx_cache_extractor.py  mlx_utils.py  rule_checker.py  semantic_isolation.py  semantic_isolation_mlx.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_a2a_server.py  test_agent_manager.py  test_api_server.py  test_apis.py  test_cache_extractor.py  test_cache_persistence.py  test_concurrent_manager.py  test_evaluators.py  test_gemma_only.py  test_kv_cache_isolation.py
(+499 files in other folders)
